--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div id="resume">
         <p><strong>alvaro</strong><span class="blank">@padilla ~ % ls -aup</span></p>
-        <p><span class="subject">Skill_highlights</span><span class="subject dir">Experience<span class="slash">/</span></span></span><span class="subject dir">Projects<span class="slash">/</span></span><span class="subject">Interests</span><span class="subject">Education</span><span class="subject">Languages</span><span class="subject">Coursework</span></p>
+        <p><span class="subject">Skill_highlights.me</span><span class="subject dir">Experience<span class="slash">/</span></span></span><span class="subject dir">Projects<span class="slash">/</span></span><span class="subject">Interests.me</span><span class="subject">Education.me</span><span class="subject">Languages.me</span><span class="subject">Coursework.me</span></p>
         <p><strong>alvaro</strong><span class="blank">@padilla ~ % cat Skill_highlights.me</span></p>
         <ul class="blank">
           <li><p>Operative Systems</p>
@@ -63,8 +63,8 @@
         </ul>
         <p><strong>alvaro</strong><span class="blank">@padilla ~ % cd Experience</span></p>
         <p><strong>alvaro</strong><span class="blank">@padilla ~<strong>/Experience</strong> % ls -alu</span></p>
-        <p class="blank">-rwxr--r-- 1 alvaro siteldi 5.0K Aug 2016 web_developer_internship</p>
-        <p class="blank">-rwxr--r-- 1 alvaro TCS&ensp;&ensp;&ensp;&ensp;5.0K Jan&ensp;2017 mainframe_developer</p>
+        <p class="blank">-rwxr--r-- 1 alvaro siteldi 5.0K Jun 2016 web_developer_internship</p>
+        <p class="blank">-rwxr--r-- 1 alvaro TCS&ensp;&ensp;&ensp;&ensp;&ensp;5.0K Jan&ensp;2017 mainframe_developer</p>
         <p><strong>alvaro</strong><span class="blank">@padilla ~<strong>/Experience</strong> % cat web_developer_internship</span></p>
         <p class="blank"><strong>Web Developer (internship)</strong> Aug 2016 – Jan 2017</p>
         <p class="blank"><strong>Siteldi Solutions</strong> – Colima, México</p>
