--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
           <li><p>Databases</p>
             <ul>
               <li><p>MySQL</p></li>
-              <li><p>DB2</p></li>
             </ul>
           </li>
         </ul>
@@ -76,7 +75,7 @@
         <p class="blank"><strong>Tata Concultancy Services</strong> – Jalisco, México</p>
         <p class="blank">Software development in COBOL, JCL and EasyTrieve programming</p>
         <p class="blank">languages and DB2 data bases.</p>
-        <p class="blank">Supporting test enviroments on fixing any issue related with obs from daily</p>
+        <p class="blank">Supporting test enviroments on fixing any issue related with jobs from daily</p>
         <p class="blank">batches.</p>
         <p class="blank">Improvement and software maintenance.</p>
         <p><strong>alvaro</strong><span class="blank">@padilla ~<strong>/Experience</strong> % cd ../Projects</span></p>
