--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <head>
 		<meta charset="UTF-8">
 		<link rel='stylesheet' href="cv.css">
@@ -162,3 +162,4 @@
     </div>
   </body>
 </html>
+-->
